--- a/index.html
+++ b/index.html
@@ -24,3 +24,176 @@
   <p>Hand-poured candles made with love and care.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Candle Cove</title>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Open Sans', sans-serif;
+      background-color: #fffaf6;
+      color: #3c2f2f;
+    }
+
+    header {
+      background: #f9eae1;
+      padding: 40px 20px;
+      text-align: center;
+      border-bottom: 2px solid #eeddd1;
+    }
+
+    header h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 3rem;
+      color: #b37058;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #7b5e57;
+    }
+
+    .hero {
+      background-image: url('https://images.unsplash.com/photo-1502920917128-1aa500764ce5');
+      background-size: cover;
+      background-position: center;
+      height: 60vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+      text-align: center;
+    }
+
+    .hero h2 {
+      font-size: 2.5rem;
+    }
+
+    .content {
+      padding: 40px 20px;
+      max-width: 900px;
+      margin: auto;
+      text-align: center;
+    }
+
+    .content h3 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+      color: #a2574d;
+    }
+
+    .content p {
+      font-size: 1.1rem;
+      color: #5c4641;
+      line-height: 1.6;
+    }
+
+    .products {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 30px;
+    }
+
+    .product {
+      background: #fdf3ed;
+      border-radius: 12px;
+      padding: 20px;
+      width: 260px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+      text-align: center;
+    }
+
+    .product img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 10px;
+    }
+
+    .product h4 {
+      margin: 10px 0 5px;
+      color: #8a4b3c;
+    }
+
+    .product p {
+      font-size: 0.95rem;
+      color: #5e4b47;
+    }
+
+    .product span {
+      display: block;
+      margin-top: 8px;
+      font-weight: bold;
+      color: #a2574d;
+    }
+
+    footer {
+      background: #f4e3d9;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #6e5750;
+      border-top: 1px solid #e1cfc4;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>The Candle Cove</h1>
+    <p>Handmade candles infused with love, calm, and a touch of magic</p>
+  </header>
+
+  <section class="hero">
+    <h2>Light Up Your Space with Elegance</h2>
+  </section>
+
+  <section class="content">
+    <h3>Welcome</h3>
+    <p>At The Candle Cove, each candle is carefully crafted with premium wax, essential oils, and heartfelt detail. Whether you're looking for calming lavender, cozy vanilla, or festive cinnamon, we’ve got the perfect glow waiting for you.</p>
+  </section>
+
+  <section class="content">
+    <h3>Featured Products</h3>
+    <div class="products">
+
+      <div class="product">
+        <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b" alt="Lavender Dream Candle">
+        <h4>Lavender Dream</h4>
+        <p>Soothing lavender blend in a pastel glass jar.</p>
+        <span>₹399</span>
+      </div>
+
+      <div class="product">
+        <img src="https://images.unsplash.com/photo-1607082352304-2c4e7d55884b" alt="Vanilla Bliss Candle">
+        <h4>Vanilla Bliss</h4>
+        <p>Warm vanilla scent with a hint of coconut.</p>
+        <span>₹449</span>
+      </div>
+
+      <div class="product">
+        <img src="https://images.unsplash.com/photo-1612801794022-f1d7c0eb7a1b" alt="Cinnamon Spice Candle">
+        <h4>Cinnamon Spice</h4>
+        <p>Festive cinnamon aroma with wooden wick.</p>
+        <span>₹499</span>
+      </div>
+
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 The Candle Cove · Handmade in India · Follow us on Instagram @thecandlecove
+  </footer>
+
+</body>
+</html>
