--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
     <div class="products">
 
       <div class="product">
-        <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b" alt="Lavender Dream Candle">
+        <img src="https://i.postimg.cc/ZK4nkKDC/518294741-122095627220941705-2637000292938117766-n.jpg>
         <h4>Lavender Dream</h4>
         <p>Soothing lavender blend in a pastel glass jar.</p>
-        <span>₹399</span>
+        <span>₹299</span>
       </div>
 
       <div class="product">
